--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
 
 <head>
     <style>
-    :root,body{
-        margin:0px;
-        overflow: hidden;
-    }
+        :root,
+        body {
+            margin: 0px;
+            overflow: hidden;
+        }
     </style>
 </head>
 
 <body>
-<canvas id="canvas"></canvas>
-<script src ="three.js" type="text/javascript"></script>
-<script src ="index.js" type="text/javascript"></script>
+    <canvas id="canvas"></canvas>
+    <script src="three.js" type="text/javascript"></script>
+    <script src="Tween.js"></script>
+    <script src="index.js" type="text/javascript"></script>
 </body>
 
 </html>
