--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <body>
     <canvas id="canvas"></canvas>
-    <script src="three.js" type="text/javascript"></script>
-    <script src="Tween.js"></script>
+    <script src="libs/three.js" type="text/javascript"></script>
+    <script src="libs/Tween.js"></script>
     <script src="index.js" type="text/javascript"></script>
 </body>
 
