--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,20 @@
     <style>
         :root,
         body {
+            position: relative;
             margin: 0px;
             overflow: hidden;
+            background-color: #252525;
+            background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ffffff' fill-opacity='0.08' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
+            /* background-size: 10px; */
+            animation: anim 100s linear infinite;
+        }
+
+        @keyframes anim {
+            50% {
+                background-position-x: -100vh;
+                background-position-y: 100vh;
+            }
         }
     </style>
 </head>
